<package format="2">
  <name>pose_subscriber_pkg</name>
  <version>0.0.0</version>
  <description>Package to subscribe to pose and send data to Pixhawk</description>
  <maintainer email="YOUR_EMAIL">YOUR_NAME</maintainer>
  <license>LICENSE</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>serial</build_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>serial</exec_depend>

</package>
